switch Collections.singletonList to List.of
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>